creating, fetching, and displaying quiz cover image with user profile image, has been simplified for performance

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
             <div>
                 <h3>Original JPEG</h3>
                 <img
-                    src=""
+                    src="defaultCover/quizium-1.webp"
                     class="originalImg"
                     style="height: 200px; width: 200px; border: 2px solid red"
                 />
@@ -18,7 +18,7 @@
             <div>
                 <h3>Converted WebP</h3>
                 <img
-                    src=""
+                    src="defaultCover/quizium-4.webp"
                     class="webpImg"
                     style="height: 200px; width: 200px; border: 2px solid blue"
                 />
