fixng the CreateQuestPage components is not re-rendering everytime the user is inputing a question,option and description for performance, and code is tidied up by diving pages with many codes to different components for readability,and some performance also. COMMIT!!

--- a/test.html
+++ b/test.html
@@ -24,6 +24,7 @@
                 />
             </div>
         </div>
+        <script src="tes.js"></script>
         <script>
             const originalImg = document.querySelector(".originalImg");
             const webpImg = document.querySelector(".webpImg");
