--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
         <title>Vite + React</title>
         <style></style>
     </head>
-    <body class="dark">
+    <body class="dark isidoraReg">
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
