--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
             sizes="32x32"
             href="favicon-32x32.png"
         />
+        <link rel="manifest" href="site.webmanifest" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Quizium</title>
