--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,7 @@
 <html lang="en" data-theme="synthwave">
     <head>
         <meta charset="UTF-8" />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="favicon-32x32.png"
-        />
+        <link rel="icon" type="image/png" href="favicon-32x32.png" />
         <link rel="manifest" href="site.webmanifest" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
